--- a/lang/cs.json
+++ b/lang/cs.json
@@ -5,6 +5,6 @@
     "motd": "MOTD",
     "ip": "IP Adresa",
     "port": "Port",
-    "player_count": "Počet Hráčů",
+    "player_count": "Počet hráčů",
     "refresh": "Obnovit"
   }
